# Spreadsheet_App_Builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  index.html  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
adapters/: base.py
adapters/officejs/: manifest.xml  package-lock.json  package.json  taskpane.html  vite.config.ts
adapters/officejs/src/: blueprint.ts  renderer.test.ts  renderer.ts  styleMapper.ts  taskpane.tsx
adapters/uno/: install.py  macro_runner.py  renderer.py  style_mapper.py
cli/: __init__.py  sab.py  server.py
cli/static/: index.html
core/: __init__.py  app_spec.py  blueprint.py  pipeline.py
core/ai/: __init__.py  system_prompt.txt  translator.py
core/ai/providers/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  openai_provider.py
core/compiler/: __init__.py  app_spec_to_blueprint.py  design_tokens.py
core/compiler/region_templates/: __init__.py  base.py  dashboard.py  invoice.py  pos.py
core/scanner/: __init__.py  context_builder.py
core/validator/: __init__.py  constraint_checker.py  schema.py
docs/: adapter_guide.md  blueprint_schema.md
examples/dashboard/: README.md
examples/invoice/: README.md  blueprint.json
examples/pos/: README.md
renderers/: __init__.py  style_mapper.py  xlsx_writer.py
taskpane/: taskpane.html
taskpane/assets/: taskpane-Bvi07dtP.js
tests/: test_compiler.py  test_context_scanner.py  test_core_pipeline.py  test_pipeline.py  test_providers.py  test_renderer_uno.py  test_renderer_xlsx.py  test_schemas.py
tests/fixtures/: dashboard_blueprint.json  pos_blueprint.json
