[tool.poetry]
name = "spreadsheet-app-builder"
version = "0.1.0"
description = "Spreadsheet App Builder (SAB) open-source engine"
authors = ["SAB Engine Team"]
readme = "README.md"
packages = [
    {include = "core"},
    {include = "adapters"},
    {include = "cli"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
anthropic = "^0.30.0"
click = "^8.1.0"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
sab = "cli.sab:cli"
sab-server = "cli.server:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
