[project]
name = "spreadsheet-app-builder"
version = "0.2.0"
description = "SAB — turn a text prompt into a working spreadsheet app"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-genai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
sab = "cli.sab:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
